# mpi-map-reduce

./: .gitignore
documentation/: alpd_pseudo.txt  map_reduce.docx  ~$p_reduce.docx
documentation/diagrams/: diagram.drawio
first_trial/mpi_map_reduce_project/: map_reduce.cpp
first_trial/presentation/code/: compile.sh  map_reduce.cpp
first_trial/presentation/code/algorithm/: master.h  reducer.h
first_trial/presentation/code/utils/: directory_utils.h
first_trial/presentation/executable/: run.sh
method_1/mpi_map_reduce_project/: CMakeLists.txt  map_reduce.cpp
method_1/mpi_map_reduce_project/algorithm/: mapper.h
method_1/mpi_map_reduce_project/utils/: word_parser.h
method_1/presentation/code/: map_reduce  map_reduce.cpp
method_1/presentation/code/algorithm/: mapper.h  master.h  reducer.h
method_1/presentation/code/utils/: printer.h
method_1/presentation/executable/: map_reduce  run.sh
method_2_old/mpi_map_reduce_project/: run.sh
method_2_old/mpi_map_reduce_project/algorithm/: mapper.h  shared.h
method_2_old/mpi_map_reduce_project/input/: file_1.txt
method_2_old/mpi_map_reduce_project/utils/: file_reader.h
method_2_old/presentation/code/utils/: printer.h
method_2_old/presentation/executable/: map_reduce
method_2_old/presentation/executable/input/: file_1.txt  file_10.txt  file_2.txt  file_9.txt
mpi_map_reduce/mpi_map_reduce_project/algorithm/: shared.h
mpi_map_reduce/mpi_map_reduce_project/input/: file_3.txt  file_6.txt
mpi_map_reduce/mpi_map_reduce_project/utils/: printer.h
mpi_map_reduce/presentation/executable/: delete_temp.sh
(+1 files in other folders)
